[package]
name = "reddit-to-lemmy"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version="4.9", features=["cookies"] }
awc = { version="*", features = ["rustls"] }
futures = "*"
serde = { version = "1.0", features = ["derive"] }
lemmy-client = "1.0.5"
serde_json = "1.0"
chrono = "*"
