[package]
name = "reddit-to-lemmy"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version="4.9", features=["cookies"] }
awc = { version="*", features = ["rustls"] }
futures = "*"
serde = { version = "1.0", features = ["derive"] }
lemmy-client = "1.0.5"
serde_json = { version="1.0", features=["preserve_order"] }
chrono = "*"
base64 = "0.22"
log = "0.4.25"
env_logger = "0.11.6"
markdown = "1.0.0-alpha.22"
